--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,7 +1,12 @@
 $main-fz: 16px;
 $black: #141414;
 $gray: #707070;
+$light-gray: #e9e9f0;
+$blue: #2e75e9;
 
+$purple: #7752ff;
 $bright-blue: #5ae2ff;
 
 $head-font: 'SegoeUiBold', sans-serif;
+$roboto: 'Roboto', sans-serif;
+$main-font: 'SegoeUiRegular', sans-serif;
