--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -21,4 +21,11 @@
       weight: 500;
     }
   }
+  &_send {
+    padding: rem(24 106);
+    font: {
+      size: rem(18);
+      weight: 700;
+    }
+  }
  }
