--- a/src/style/components/_first-slide.scss
+++ b/src/style/components/_first-slide.scss
@@ -1,10 +1,9 @@
 .first-slide {
-  background: url('../img/index-bg.png') no-repeat;
-  background-position: -70% center;
-  min-height: 100vh;
-  @media (min-width: 1980px) {
-    display: flex;
-    align-items: center;
+  &.background-layout {
+    @media (min-width: 1980px) {
+      display: flex;
+      align-items: center;
+    }
   }
 }
 
@@ -16,7 +15,6 @@
 
 .first-slide__button {
   font-size: rem(24);
-  margin-right: rem(114);
   transition: color 250ms;
   &:hover, &:focus {
     color: lighten($black, 30%);
@@ -27,7 +25,7 @@
     display: block;
     color: $bright-blue;
     &:hover, &:focus {
-      color: darken($bright-blue, 30%);
+      color: darken($bright-blue, 20%);
     }
   }
 }
@@ -37,7 +35,7 @@
 }
 
 .first-slide__content {
-  padding: rem(79 108 51 38);
+  padding: rem(79 108 0 38);
   @media (min-width: 1980px) {
     width: 100%;
   }
@@ -47,5 +45,12 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-bottom: rem(256);
+}
+
+.first-slide__link {
+  position: relative;
+  &_inline-block {
+    display: inline-block;
+    margin-right: rem(114);
+  }
 }
