--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -1,5 +1,39 @@
 .footer {
+  flex: 0 0 auto;
   display: flex;
   align-items: flex-start;
   justify-content: flex-end;
+  padding: rem(0 108 50 38);
+  &_justify-flex-start {
+    justify-content: flex-start;
+    padding: {
+      right: rem(73);
+      left: rem(13);
+      bottom: rem(10);
+    }
+  }
+  &_relative {
+    position: relative;
+    z-index: 5;
+  }
+}
+
+.footer__rights {
+  font: {
+    size: rem(13);
+    weight: 300;
+  }
+  color: $gray;
+  line-height: 1.2;
+  text-align: center;
+  margin: {
+    top: rem(16);
+    right: rem(13);
+  }
+}
+
+.footer__counters {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
