--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,6 +3,8 @@ $black: #141414;
 $gray: #707070;
 $light-gray: #e9e9f0;
 $blue: #2e75e9;
+$alt-blue: #65baff;
+$link-blue: #357bee;
 
 $purple: #7752ff;
 $bright-blue: #5ae2ff;
@@ -10,3 +12,4 @@ $bright-blue: #5ae2ff;
 $head-font: 'SegoeUiBold', sans-serif;
 $roboto: 'Roboto', sans-serif;
 $main-font: 'SegoeUiRegular', sans-serif;
+$segoe-light: 'SegoeUiLight', sans-serif;
