--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -5,11 +5,20 @@ $light-gray: #e9e9f0;
 $blue: #2e75e9;
 $alt-blue: #65baff;
 $link-blue: #357bee;
+$dark-blue: #003277;
+$dashboard-blue: #109bf8;
+$block-color: #576271;
+$border-color: #f7f9fb;
 
 $purple: #7752ff;
+$violet: #887bff;
 $bright-blue: #5ae2ff;
+$red: #f80a0a;
+$green: #69c113;
+$confirmed-green: #7fff7b;
 
 $head-font: 'SegoeUiBold', sans-serif;
 $roboto: 'Roboto', sans-serif;
 $main-font: 'SegoeUiRegular', sans-serif;
 $segoe-light: 'SegoeUiLight', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
