--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -15,11 +15,18 @@
   &_margin-right-45 {
     margin-right: rem(-45);
   }
+  &_margin-left-81 {
+    margin-left: rem(81);
+  }
+  &_margin-bottom-26 {
+    margin-bottom: rem(26);
+  }
   &_font-size-34 {
     font: {
       size: rem(34);
       weight: 500;
     }
+    padding: rem(16 62 17);
   }
   &_send {
     padding: rem(24 106);
