--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -14,8 +14,29 @@
   }
 }
 
+select, input {
+  @extend %default-reset;
+}
+
 .form__item {
   margin-bottom: rem(44);
+  &_with-content {
+    border-bottom: 2px solid $light-gray;
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+  }
+  &_margin-bottom-34 {
+    margin-bottom: rem(34);
+  }
+  &_flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .form__input {
+      max-width: rem(200);
+    }
+  }
 }
 
 .form__button {
@@ -23,14 +44,30 @@
   justify-content: center;
 }
 
+.form__content {
+  padding: rem(2 5 6 5);
+  line-height: 1.2;
+  white-space: nowrap;
+  @extend %default-text;
+  &_font-size-19 {
+    font-size: rem(19);
+  }
+}
+
 .form__input {
   width: 100%;
   padding: rem(2 5 6 5);
   border-bottom: 2px solid $light-gray;
   @extend %default-text;
-  @extend %default-reset;
   @include input-placeholder {
     color: #43425d;
+  }
+  &_alt {
+    border-bottom: none;
+    flex-basis: 100%;
+  }
+  &_font-size-19 {
+    font-size: rem(19);
   }
 }
 
@@ -41,11 +78,14 @@
     weight: 400;
   }
   color: $blue;
-  margin-right: rem(14);
+  // margin-right: rem(14);
   transition: color 250ms;
   cursor: pointer;
   &:hover, &:focus {
     color: darken($blue, 20%);
+  }
+  &_font-size-14 {
+    font-size: rem(14);
   }
 }
 
@@ -57,6 +97,11 @@
 .form__accept {
   &_margin-right {
     margin-right: rem(-79);
+  }
+  &_flex-end {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: rem(-50);
   }
 }
 
@@ -79,9 +124,8 @@
   min-width: rem(112);
   max-width: rem(112);
   padding: rem(2 30 6 5);
-  border-bottom: 2px solid $light-gray;
+
   color: #43425d;
-  @extend %default-reset;
   font: {
     size: rem(15);
     family: $roboto;
