--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -25,7 +25,7 @@
 
 html {
   height: 100%;
-  font: 400 #{16px}/#{1.87} $main-font;
+  font: 400 #{16px}/#{1.3} $main-font;
 }
 
 body,
@@ -97,24 +97,32 @@ h1 {
   height: 100%;
 }
 
+.dashboard-wrapper {
+  display: flex;
+}
+
+.withdraw-container {
+  width: 100%;
+  background: #fff;
+  padding: rem(11 18 158 0);
+  display: flex;
+  justify-content: space-between;
+}
+
 .content {
   flex: 1 0 auto;
 }
 
-// h2 {
-//   font: {
-//     size: rem(36);
-//     family: $head-font;
-//     weight: 400;
-//   }
-//   line-height: 1.2;
-//   margin: 0;
-//   text-transform: uppercase;
-//   @media (max-width: 540px) {
-//     font-size: rem(22);
-//   }
-// }
-//
+h2 {
+  font: {
+    size: rem(26);
+    family: $roboto;
+    weight: 400;
+  }
+  margin: 0;
+  color: $block-color;
+}
+
 p {
   line-height: 1.4;
   text-align: left;
@@ -136,9 +144,15 @@ img {
 //   }
 // }
 
+@media (max-width: 1500px) and (max-height: 850px) {
+  html {
+    font-size: 12px;
+  }
+}
+
 @media (max-width: 1200px) {
   html {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -181,3 +195,21 @@ img {
 @import "components/contact-container";
 @import "components/contact-form";
 @import "components/contacts";
+@import "components/aside-nav";
+@import "components/aside-nav-container";
+@import "components/header";
+@import "components/dashboard";
+@import "components/logout";
+@import "components/block";
+@import "components/document";
+@import "components/progress";
+@import "components/data";
+@import "components/select";
+@import "components/gradient-button";
+@import "components/border-button";
+@import "components/card-form";
+@import "components/wallet-balance";
+@import "components/table";
+@import "components/checkbox";
+@import "components/withdraw-block";
+@import "components/user-docs";
