--- a/src/style/components/_withdraw-block.scss
+++ b/src/style/components/_withdraw-block.scss
@@ -1,5 +1,5 @@
 .withdraw-block {
-  margin: rem(68 0 0 286);
+  margin: rem(61 0 0 286);
   max-width: rem(757);
   width: 100%;
   .form__input,
@@ -25,7 +25,7 @@
   border-radius: 8px;
   box-shadow: 0 3px 6px rgba(238, 219, 219, 0.68);
   background: #fff;
-  padding: rem(32 108 39);
+  padding: rem(32 70 39);
   text-align: center;
   margin-bottom: rem(79);
 }
@@ -36,7 +36,7 @@
     weight: 400;
   }
   text-align: center;
-  margin-bottom: rem(56);
+  margin-bottom: rem(60);
   color: $block-color;
 }
 
@@ -45,24 +45,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 3px solid $border-color;
-  padding-bottom: rem(45);
+  padding-bottom: rem(38);
 }
 
 .withdraw-block__select {
   width: rem(134);
 }
 
-.withdraw__input {
+.withdraw-block__input {
   max-width: rem(200);
   color: #0d1539;
   padding: rem(2 5 6 5);
+  margin-right: rem(15);
   font: {
     size: rem(51);
     weight: 500;
     family: $main-font;
   }
-  border-bottom: 1px solid $border-color;
 }
 
 .withdraw-block__btn {
@@ -72,6 +71,6 @@
     weight: 500;
   }
   color: #0d1539;
-  padding-bottom: rem(20);
+  padding-bottom: rem(30);
   border-bottom: rem(20) solid $red;
 }
