--- a/src/style/components/_block.scss
+++ b/src/style/components/_block.scss
@@ -29,7 +29,7 @@
 
 .block__header {
   border-bottom: 1px solid #e0e3da;
-  padding: rem(26 30 30 30);
+  padding: rem(26 30 30 33);
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -45,6 +45,9 @@
   }
   &_big-padding-right {
     padding-right: rem(100);
+  }
+  &_exchange {
+    padding-right: rem(152);
   }
 }
 
@@ -62,11 +65,12 @@
   }
   &_violet {
     color: $violet;
+    font-family: $main-font;
   }
   &_margins {
     margin: {
-      left: rem(12);
-      bottom: rem(47);
+      left: rem(10);
+      bottom: rem(50);
     }
     font-size: rem(24);
     line-height: 21px;
@@ -94,12 +98,12 @@
     border-bottom-color: $dashboard-blue;
   }
   &:not(:last-child) {
-    margin-right: rem(36);
+    margin-right: rem(30);
   }
 }
 
 .block__body {
-  padding: rem(42 30);
+  padding: rem(37 30 50);
   &_flex {
     padding: {
       top: rem(16);
@@ -115,7 +119,10 @@
     padding: rem(22 38 78 29);
   }
   &_alt-padding {
-    padding: rem(12 50 10 0);
+    padding: rem(18 54 10 0);
+  }
+  &_wallet-balance {
+    padding: rem(45 38 10 56);
   }
 }
 
@@ -145,17 +152,20 @@
 .block__form {
   position: relative;
   margin: {
-    top: rem(20);
+    top: rem(30);
     right: rem(95);
   }
 }
 
 .block__datas {
-  margin-right: rem(48);
+  margin: {
+    right: rem(48);
+    top: rem(2);
+  }
 }
 
 .block__exchange-form {
-  margin-top: rem(54);
+  margin-top: rem(56);
   max-width: rem(507);
   flex-grow: 1;
 }
