--- a/src/style/components/_data.scss
+++ b/src/style/components/_data.scss
@@ -5,7 +5,7 @@ $data-active-color: #0f9af8;
 
 .data {
   &:not(:last-child) {
-    margin-bottom: rem(10);
+    margin-bottom: rem(8);
   }
 }
 
@@ -15,10 +15,13 @@ $data-active-color: #0f9af8;
   background-color: $indicator-bg;
   opacity: 0.66;
   border-radius: 3px;
-  margin-bottom: rem(8);
-  transition: background-color 250ms;
+  margin-bottom: rem(6);
+  transition: all 250ms;
   &_active {
     background-color: $indicator-active-bg;
+    height: rem(18);
+    width: rem(65);
+    margin-left: rem(-6);
   }
 }
 
@@ -29,8 +32,9 @@ $data-active-color: #0f9af8;
   }
   text-align: left;
   color: $data-color;
-  transition: color 250ms;
+  transition: all 250ms;
   &_active {
+    font-size: rem(18);
     color: $data-active-color;
   }
 }
