--- a/src/style/components/_document.scss
+++ b/src/style/components/_document.scss
@@ -6,7 +6,7 @@
   border-bottom: 1px solid $border-color;
   padding-bottom: rem(24);
   &:not(:first-child) {
-    padding-top: rem(23);
+    padding-top: rem(19);
   }
 }
 
@@ -15,12 +15,16 @@
     size: rem(18);
     weight: 500;
   }
-  max-width: 27%;
-  min-width: 27%;
+  max-width: 30%;
+  min-width: 30%;
   // margin-right: rem(148);
 }
 
 .document__progress {
-  margin-right: rem(64);
+  margin-right: rem(60);
   flex-grow: 1;
+}
+
+.document__button {
+  margin-top: rem(10);
 }
