--- a/src/style/components/_progress.scss
+++ b/src/style/components/_progress.scss
@@ -4,6 +4,7 @@ $progress-waiting-bg: #eaeaea;
 .progress {
   max-width: rem(348);
   width: 100%;
+  margin-top: rem(5);
 }
 
 .progress__line {
@@ -11,7 +12,7 @@ $progress-waiting-bg: #eaeaea;
   height: rem(18);
   padding: rem(2);
   border-radius: 9px;
-  margin-bottom: rem(7);
+  margin-bottom: rem(3);
   &_waiting {
     background: $progress-waiting-bg;
   }
