--- a/src/style/components/_wallet-balance.scss
+++ b/src/style/components/_wallet-balance.scss
@@ -5,7 +5,7 @@
   border-radius: 7px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
   background: #fff;
-  padding: rem(8 5 5 20);
+  padding: rem(10 10 5 17);
   color: $block-color;
   &:not(:last-child) {
     margin-bottom: rem(20);
@@ -22,6 +22,7 @@
   font: {
     size: rem(20);
     weight: 400;
+    family: $main-font;
   }
   margin-bottom: rem(10);
 }
@@ -30,8 +31,10 @@
   font: {
     size: rem(30);
     weight: 400;
+    family: $main-font;
   }
-  margin-bottom: rem(5);
+  margin-bottom: rem(2);
+  text-transform: uppercase;
   &_margin-bottom-0 {
     margin-bottom: 0;
   }
