--- a/src/style/components/_background-layout.scss
+++ b/src/style/components/_background-layout.scss
@@ -1,5 +1,6 @@
 .background-layout {
   background: url('../img/index-bg.png') no-repeat;
+  background-size: contain;
   min-height: 100vh;
   position: relative;
   &_with-back {
@@ -14,6 +15,12 @@
       z-index: 1;
       top: rem(210);
     }
+  }
+  @media (max-width: 1024px) and (max-height: 768px) and (orientation: landscape) {
+    background-size: cover;
+  }
+  @media (max-width: 1024px) and (max-height: 1366px) {
+    background-size: cover;
   }
 }
 
