--- a/src/style/components/_first-slide.scss
+++ b/src/style/components/_first-slide.scss
@@ -9,9 +9,22 @@
 
 .first-slide__title {
   text-align: right;
-  margin-bottom: rem(90);
   max-width: rem(1148);
   line-height: 1.33;
+  margin-bottom: rem(90);
+  margin-left: rem(600);
+  @media (max-width: 1366px) and (max-height: 1024px) {
+    margin-left: 0;
+  }
+  @media (max-width: 1024px) and (max-height: 1366px) {
+    margin-left: 0;
+  }
+  @media (max-width: 888px) {
+    margin-left: rem(300);
+  }
+  @media (max-width: 768px) {
+    margin-left: rem(0);
+  }
 }
 
 .first-slide__button {
@@ -29,6 +42,19 @@
       color: darken($bright-blue, 20%);
     }
   }
+  @media (max-width: 1024px) and (max-height: 1366px) {
+    color: #fff;
+    &:hover, &:focus {
+      color: darken(#fff, 20%);
+    }
+  }
+
+  @media (max-width: 768px) {
+    color: #fff;
+    &:hover, &:focus {
+      color: darken(#fff, 20%);
+    }
+  }
 }
 
 .first-slide__actions {
@@ -36,12 +62,18 @@
   justify-content: flex-start;
   align-items: center;
   padding-right: rem(78);
+  @media (max-width: 1080px) {
+    padding-right: 0;
+  }
 }
 
 .first-slide__content {
   padding: rem(0 128 0 38);
   @media (min-width: 1980px) {
     width: 100%;
+  }
+  @media (max-width: 800px) {
+    padding: rem(0 50 0 38);
   }
 }
 
