--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -59,6 +59,7 @@ select, input {
   &_font-size-19 {
     font-size: rem(19);
     padding-bottom: rem(13);
+    line-height: 1.3;
   }
 }
 
@@ -76,6 +77,9 @@ select, input {
   }
   &_font-size-19 {
     font-size: rem(19);
+    padding-bottom: rem(13);
+    padding-top: 0;
+    line-height: 1.3;
   }
 }
 
@@ -107,9 +111,11 @@ select, input {
     margin-right: rem(-79);
   }
   &_flex-end {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: rem(-82);
+    @media (min-width: 1900px) {
+      display: flex;
+      justify-content: flex-end;
+      margin-right: rem(-82);
+    }
   }
 }
 
