--- a/src/style/components/_background-layout.scss
+++ b/src/style/components/_background-layout.scss
@@ -22,6 +22,15 @@
   @media (max-width: 1024px) and (max-height: 1366px) {
     background-size: cover;
   }
+  @media (max-width: 1080px) {
+    background-position-x: -360px;
+  }
+  @media (max-width: 900px) {
+    background-position-x: -500px;
+  }
+  @media (max-width: 475px) {
+    background-position-x: 62%;
+  }
 }
 
 .background-layout__content {
