--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -4,6 +4,12 @@
   align-items: center;
   padding: rem(27 89 65 18);
   height: rem(159);
+  @media (max-width: 768px) {
+    padding: {
+      right: rem(30);
+      bottom: rem(30);
+    }
+  }
 }
 
 .header__logo {
