--- a/src/style/components/_select.scss
+++ b/src/style/components/_select.scss
@@ -8,6 +8,9 @@
       background: transparent;
     }
   }
+  .select2-container {
+    min-width: rem(120);
+  }
   .select2-container .select2-selection--single {
     height: auto;
     .select2-selection__rendered {
@@ -55,6 +58,9 @@
             weight: 400;
           }
           padding: 0;
+          @media (max-width: 475px) {
+            font-size: rem(40);
+          }
         }
         .select2-selection__arrow {
           width: rem(36);
@@ -67,6 +73,11 @@
             margin-top: 0;
             border-width: rem(24) rem(18) 0 rem(18);
             border-color: $green transparent transparent transparent;
+            @media (max-width: 475px) {
+              border-width: rem(20) rem(15) 0 rem(15);
+              top: 50%;
+              transform: translateY(-50%);
+            }
           }
         }
       }
@@ -76,6 +87,9 @@
         b {
         border-width: 0 rem(18) rem(24) rem(18);
         border-color: transparent transparent $green transparent;
+        @media (max-width: 475px) {
+          border-width: 0 rem(15) rem(20) rem(15);
+        }
       }
     }
   }
