--- a/src/style/components/_withdraw-block.scss
+++ b/src/style/components/_withdraw-block.scss
@@ -18,6 +18,30 @@
   }
   .form__accept {
     margin-left: rem(98);
+    @media (max-width: 768px) {
+      margin-left: 0;
+    }
+  }
+  @media (max-width: 1500px) {
+    margin-left: 0;
+  }
+  @media (max-width: 1440px) and (max-height: 800px) {
+    margin-left: rem(200);
+  }
+  @media (max-width: 1280px) {
+    margin-left: 0;
+  }
+  @media (max-width: 1080px) {
+    margin-right: rem(15);
+    & + .block_small {
+      max-width: rem(364);
+    }
+  }
+  @media (max-width: 768px) {
+    margin: 0 0 rem(50);
+    & + .block_small {
+      max-width: rem(757);
+    }
   }
 }
 
@@ -28,6 +52,15 @@
   padding: rem(32 70 39);
   text-align: center;
   margin-bottom: rem(79);
+  @media (max-width: 768px) {
+    margin-bottom: rem(30);
+  }
+  @media (max-width: 540px) {
+    padding: {
+      right: rem(15);
+      left: rem(15);
+    }
+  }
 }
 
 .withdraw-block__title {
@@ -61,6 +94,10 @@
     size: rem(51);
     weight: 500;
     family: $main-font;
+  }
+  @media (max-width: 475px) {
+    font-size: rem(40);
+    margin-right: 0;
   }
 }
 
